--- a/ka18.md
+++ b/ka18.md
@@ -28,6 +28,6 @@ left_section: |
     Kies je project uit meer dan 10 mogelijkheden: Ontwerp je eigen Japans T-shirt, kap de Japanse Jizo uit speksteen of…. Ga aan de slag met je eigen keuze techniek of materiaal! 
     Meer info over dit atelier op Atelier Japan (link naar atelier japan)
     
-    Inschrijven kan vanaf nu via deze link!
+    <a href="/inschrijven" title="inschrijven">Schrijf je nu in!</a>
 ---
 
