--- a/ka18.md
+++ b/ka18.md
@@ -26,7 +26,7 @@ left_section: |
     
     Op 22 september gaat KA18+ van start met als centraal thema ‘Japan’.  
     Kies je project uit meer dan 10 mogelijkheden: Ontwerp je eigen Japans T-shirt, kap de Japanse Jizo uit speksteen of…. Ga aan de slag met je eigen keuze techniek of materiaal! 
-    Meer info over dit atelier op Atelier Japan (link naar atelier japan)
+    Meer info over dit atelier op <a href="/ateliers">Atelier Japan</a>
     
     <a href="/inschrijven" title="inschrijven">Schrijf je nu in!</a>
 ---
