--- a/ka18.md
+++ b/ka18.md
@@ -20,7 +20,7 @@ left_section: |
 
     **Kanvas Atelier biedt nu ook ateliers aan voor jongeren van 18+: KA18+** 
     
-    De ateliers zullen grotendeels dezelfde werking (link naar broeinest)  volgen van Kanvas Atelier. We spreken in dezelfde periodes van 5 weken af maar op zaterdagvoormiddag van 10u tot 12u.
+    De ateliers zullen grotendeels <a href="/broeinest">dezelfde werking</a> volgen van Kanvas Atelier. We spreken in dezelfde periodes van 5 weken af maar op zaterdagvoormiddag van 10u tot 12u.
     
     Speciaal voor dit atelier voegen we een vrijblijvende extra verdieping of uitdaging toe aan iedere opdracht! 
     
